# espatula

./: .gitignore  CHANGELOG.md  README.md  amazon.py  americanas.py  app.py  base.py  callbacks.py  carrefour.py  casas_bahia.py  config.json  config.py  data_processing.py  environment.yml  environment_dev.yml  environment_history.yml  environment_processing.yml  environment_win_history.yml  inspect_pages.bat  inspect_pages.ps1  magalu.py  mercado_livre.py  pyproject.toml  regulatron.bat  regulatron.ps1  release.ps1  requirements.txt  run.py  run_app.py  ui.py
espatula/: amazon.py  americanas.py  base.py  carrefour.py  casasbahia.py  certificacao.py  constantes.py  constants.py  magalu.py  mercadolivre.py  modelos.py  processamento.py
espatula/spiders/: __init__.py  amazon.py  americanas.py  base.py  carrefour.py  casasbahia.py  magalu.py  mercadolivre.py
hooks/: hook-streamlit.py
hooks/.streamlit/: config.toml
images/: video.webm
notebooks/: 21_format_issues.ipynb  amazon.ipynb  americanas.ipynb  carrefour.ipynb  casasbahia.ipynb  magalu.ipynb  mercado_livre.ipynb  pdfs.ipynb  shopee.ipynb
scripts/: scrape.py  test_ml.py  test_model.py
