[project]
name = "espatula"
version = "0.1.0"
description = "Raspagem de Dados de Produtos de Telecomunicações"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastcore>=1.7.4",
    "gazpacho>=1.1",
    "gradio-client>=1.3.0",
    "pypdf>=4.3.1",
    "seleniumbase>=4.30.1",
    "streamlit>=1.38.0",
]

[tool.uv]
dev-dependencies = []
