[project]
name = "espatula"
version = "0.3.0"
description = "Raspagem de Dados de Produtos de Telecomunicações"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastcore>=1.7.4",
    "gradio-client>=1.3.0",
    "markdownify>=0.13.1",
    "openpyxl>=3.1.5",
    "pyautogui>=0.9.54",
    "pypdf>=4.3.1",
    "seleniumbase>=4.30.1",
    "streamlit-pdf-viewer>=0.0.18",
    "streamlit>=1.38.0",
]
